k8s/deployment/05-postgresql/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: promptcontent-dev
  labels:
    app: postgres
    tier: database
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        tier: database
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - postgres
              topologyKey: kubernetes.io/hostname
      containers:
        - name: postgres
          image: ankane/pgvector:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          args:
            - "-c"
            - "listen_addresses=*"
            - "-c"
            - "hba_file=/etc/postgresql/pg_hba.conf"
          volumeMounts:
            - name: pg-hba
              mountPath: /etc/postgresql
              readOnly: true
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: pg-hba
          configMap:
            name: pg-hba-cm
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-volume-claim
