k8s/deployment/05-postgresql/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: promptcontent-dev
  labels:
    app: postgres
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
